Support for 1.20.5/6 (#2721)
* 1.20.6

Signed-off-by: Alexander Brandes <mc.cache@web.de>

* work

Signed-off-by: Alexander Brandes <mc.cache@web.de>

* More work

Signed-off-by: Alexander Brandes <mc.cache@web.de>

* chore: address more removed fields and methods, make it run

* chore: don't allocate unnecessary arrays (by maps)

* chore: the comment might still be noteworthy

* chore: no need to synchronize twice

* fix obfuscation changes

* remove unneeded deprecation

* make regen work without throwing exceptions - but slow

* fix: error when adapting BaseItemStacks without nbt

* fix annoying paper api breakage

---------

Signed-off-by: Alexander Brandes <mc.cache@web.de>
Co-authored-by: Alexander Brandes <mc.cache@web.de>
Co-authored-by: Pierre Maurice Schwang <mail@pschwang.eu>